crates/corral-tui/src/snapshots/corral_tui__presentation__tests__a_discovered_session_with_identity_drops_the_warming_up_line.snap
---
source: crates/corral-tui/src/presentation_tests.rs
assertion_line: 404
expression: "rendered(&external(\"running\", Some(\"session-abc\")))"
---
Running · Status unknown
  Running outside Corral
  Screen unavailable
  [open refused] Screen unavailable
