crates/corral-tui/src/snapshots/corral_tui__presentation__tests__a_discovered_session_without_identity_renders_honestly.snap
---
source: crates/corral-tui/src/presentation_tests.rs
assertion_line: 396
expression: "rendered(&external(\"running\", None))"
---
Running · Status unknown
  Running outside Corral
  Status is limited until new activity arrives from this session.
  Screen unavailable
  [open refused] Screen unavailable
