crates/corral-tui/src/snapshots/corral_tui__presentation__tests__a_managed_session_carries_no_origin_line.snap
---
source: crates/corral-tui/src/presentation_tests.rs
assertion_line: 423
expression: rendered(&item)
---
Running · Status unknown
