crates/corral-tui/src/snapshots/corral_tui__presentation__tests__a_rotted_claim_renders_unknown_with_the_last_known_fact.snap
---
source: crates/corral-tui/src/presentation_tests.rs
expression: rendered(&item)
---
Running · Status unknown
  Last known: Needed input 16m ago
