crates/corral-tui/src/snapshots/corral_tui__presentation__tests__a_session_that_needs_you_renders_the_state_alone.snap
---
source: crates/corral-tui/src/presentation_tests.rs
expression: "rendered(&attended(AttentionWireState::NeedsYou, Vec::new()))"
---
Needs You
