crates/corral-tui/src/snapshots/corral_tui__presentation__tests__a_working_session_renders_the_state_alone.snap
---
source: crates/corral-tui/src/presentation_tests.rs
expression: "rendered(&attended(AttentionWireState::Working, Vec::new()))"
---
Working
