crates/corral-tui/src/snapshots/corral_tui__presentation__tests__an_origin_from_a_later_build_renders_as_no_origin_at_all.snap
---
source: crates/corral-tui/src/presentation_tests.rs
assertion_line: 433
expression: rendered(&item)
---
Running · Status unknown
  Screen unavailable
  [open refused] Screen unavailable
